gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23786.d
version https://git-lfs.github.com/spec/v1
oid sha256:611b57562c1594896912772f942b00eead287639b017c2a4c31269ec90780edb
size 1417
